<resources>
    <string name="app_name">Party Finder</string>

    <string name="content_description">image</string>
    <string name="title_login">Login</string>
    <string name="et_hint_email_id">Email</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="btn_lbl_google_login">Continue with Google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>

    <string name="create_an_account">Create an Account</string>

    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>

    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u> Terms &amp; Conditions</u></string>
    <string name="btn_lbl_register">Register</string>

    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>

    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password do not match.</string>
    <string name="err_msg_agree_terms_and_conditions">Please agree to our terms and conditions.</string>
    <string name="register_success">Thanks for registering!</string>

    <string name="please_wait">Please Wait&#8230;</string>

    <string name="title_forgot_password">Forgot Password</string>
    <string name="forgot_password_title_description">Enter your email address below to receive instructions on how to reset your password.</string>
    <string name="btn_lbl_submit">Submit</string>

    <string name="email_sent_success">Password recovery email sent successfully!</string>

    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_profile">Profile</string>
    <string name="et_hint_phone_number">Phone Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Save</string>

    <string name="read_storage_permission_denied">Oops, it looks like you denied the permission for storage. You can always grant it in the settings.</string>

    <string name="image_selection_failed">Image selection failed!</string>

    <string name="err_msg_enter_phone_number">Please enter phone number.</string>

    <string name="msg_profile_update_success">Profile updated successfully!</string>

    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_new_party">New Party</string>

    <string name="please_click_back_again_to_exit">Click back again to exit.</string>

    <string name="action_settings">Settings</string>

    <string name="title_settings">Settings</string>
    <string name="lbl_edit">Edit</string>
    <string name="btn_lbl_logout">Logout</string>

    <string name="title_home_fragment">Home</string>
    <string name="title_map_fragment">Find new parties</string>

    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="take_a_picture">Take a Picture</string>

    <string name="camera_permission_denied">Oops, it looks like you denied the permission for camera. You can always grant it in the settings.</string>
    <string name="location_permission_denied">Oops, it looks like you denied the permission for location. You can always grant it in the settings.</string>

    <string name="hint_party_name">Party name</string>
    <string name="btn_lbl_pick_date">Pick a start date</string>

    <string name="action_next">Next</string>

    <string name="err_msg_select_party_image">Please select an image.</string>
    <string name="err_msg_enter_party_name">Please enter party name.</string>
    <string name="err_msg_select_party_date">Please select a date.</string>

    <string name="title_activity_location_picker">LocationPickerActivity</string>
    <string name="title_location_picker">Pick a location</string>

    <string name="err_msg_select_party_location">Please select a location.</string>

    <string name="item_party_name">Party name</string>
    <string name="item_party_address">Party address</string>
    <string name="item_party_date">Party date</string>

</resources>