<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_marginBottom="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_party_image"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:src="@drawable/ic_party_placeholder"
        android:scaleType="centerCrop"
        android:contentDescription="@string/content_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.example.partyfinder.utils.CustomTextViewBold
        android:id="@+id/tv_party_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:text="@string/item_party_name"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/iv_party_image"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.example.partyfinder.utils.CustomTextView
        android:id="@+id/tv_party_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/item_party_address"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintStart_toEndOf="@+id/iv_party_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_party_name"/>

    <com.example.partyfinder.utils.CustomTextView
        android:id="@+id/tv_party_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/item_party_date"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/iv_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_share_white_24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>